# software_science

./: .gitignore  README.md
SS/: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
SS/MCC/: .gitignore  find-1-safe
SS/examples/: CTLFireability.xml  model.andl
SS/src/: .gitignore  CMakeLists.txt  CTL.c  CTL.h  Makefile.am  andl-lexer.c  andl-lexer.h  andl-lexer.l  andl-parser.y  andl.c  andl.h  config.h  mutex.tex  ss-andl-parser.c  ss-andl-parser.h  ss.c  util.c  util.h
SS/src/.deps/: ss-CTL.Po  ss-andl-lexer.Po  ss-andl.Po  ss-ss-andl-parser.Po  ss-ss.Po  ss-util.Po
mutex/: .gitignore  BDD-0.dot  BDD.dot  CMakeLists.txt  main.c
program_verification/: example.smt2  invariant example.txt  invariant example2.txt  loop_unroll.txt  mul_to_even.dfy  psuedo_code.txt  readme.md  week_2.rar  z3.smt2
program_verification/ss_program_verification/: .gitignore  pom.xml  readme.md
program_verification/ss_program_verification/src/main/java/: JavaExample.java  Main.java  Tree.java  Twizzle.java  Variable.java
program_verification/ss_program_verification/src/main/resources/: Example.java  Example_1.java  Example_10.java  Example_11.java  Example_12.java  Example_13.java  Example_1_1.java  Example_2.java  Example_2_1.java  Example_3.java  Example_4.java  Example_5.java  Example_6  Example_6.java  Example_7.java  Example_8.java  Example_8_2.java  Example_8_3.java  Example_8_4.java  Example_9.java  Example_9_1.java  Example_9_3.java  Example_9_4.java  Main.java
program_verification/week_1/: mul_to_even.dfy  program_verification.rar
program_verification/week_2/: Example_2.java  Example_3.java  readme.md  ss_program_verification_source.rar
program_verification/week_2/patrick_lars_program_verification/: Example_1.java  Example_2.java  readme.md
program_verification/week_2/patrick_lars_program_verification/ss_program_verification_source/src/main/java/: Main.java  Tree.java
program_verification/week_3/: Example_1.java  Example_3.java  readme.md
program_verification/week_3/ss_program_verification/: readme.md
program_verification/week_3/ss_program_verification/src/main/java/: Main.java  Variable.java
program_verification/week_3/ss_program_verification/src/main/resources/: Example_5.java
